log/build_2022-08-18_04-54-38/neural_data_generator/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/workspace/BMI/install/neural_data_generator/lib/python3.10/site-packages/neural_data_generator/blackrock_ir_reader.py", line 25
    return list(np.array(neural_buffer_deque).T*smoothed_parameter).sum(1))
                                                                          ^
SyntaxError: unmatched ')'

